# pennybox

./: .env.sample  README.md  pyproject.toml
pennybox/database/: db.py
pennybox/models/: expense.py
pennybox/services/: expense_service.py
tests/: conftest.py  test_expense_service.py
