[project]
name = "pennybox"
version = "0.1.0"
description = "Smart expense tracking bot which takes in your images of receipts, your audio recordings of what you have spent or simply your text inputs"
authors = [
    {name = "Arkar Min Aung",email = "arica.aung@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "whisper (>=1.1.10,<2.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "python-telegram-bot (>=21.10,<22.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "prettytable (>=3.12.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = [".", "pennybox"]

